--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "*",
     "react-native-reanimated": "*"
   },
   "devDependencies": {
